<resources>
    <string name="app_name">Data_Store_try2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="empty_text"></string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- first fragment -->
    <string name="first_fragment_label">DB : Preferences </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="textbar_1st">Text</string>
    <string name="btn_1st_add">ADD</string>
    <string name="btn_1st_load">LOAD</string>

    <!-- second fragment -->
    <string name="second_fragment_label">DB : LinkedList</string>
    <string name="btn2_savetoList">ADD TO LIST</string>
    <string name="btn2_loadList">LOAD LIST</string>
    <string name="btn2_appendlist">APPEND LIST</string>
    <string name="btn2_delete_db">DELETE ALL</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn2_sql">To SQLite3</string>
    <!-- 3rd sqlite -->
    <string name="fragment_d_b__s_q_lite_try2">SQLite3</string>
    <string name="input3_name">First Name</string>
    <string name="input3_mail">Mail</string>
    <string name="btn3_add">ADD</string>
    <string name="btn3_read">READ</string>
    <string name="btn3_clear">CLEAR</string>
    <string name="text3_1st">!Hello blank fragment!</string>
    <string name="btn3_to_img">To IMG</string>
    <string name="btn3_creatdb">Create DB</string>
    <string name="btn3_readdb">Read DB</string>
    <string name="btn3_appenddb">Append DB</string>
    <string name="long_txt">l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n
    l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n l\n
    l\n l\n l\n </string>
    <!-- 4th img page -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text4_dir">Dir : </string>
    <string name="img_graf">Image Graf</string>
    <string name="btn4_showdir">Show Dir</string>
    <string name="btn4_changeimg">Change Img</string>
    <string name="btn4_createtxt">Create TXT</string>
    <string name="btn4_showtxt">Show TXT</string>
    <string name="dummy_txt">Dummy</string>
</resources>