<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.data_store_try2.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.data_store_try2.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_DBsqlite"
            app:destination="@+id/DB_SQLite_try2" />
    </fragment>
    <fragment
        android:id="@+id/DB_SQLite_try2"
        android:name="com.example.data_store_try2.DB_SQLite_try2"
        android:label="@string/fragment_d_b__s_q_lite_try2"
        tools:layout="@layout/fragment_d_b__s_q_lite_try2">
        <action
            android:id="@+id/action_DB_SQL_to_img_Page"
            app:destination="@+id/imgPage"
        />
    </fragment>
    <fragment
        android:id="@+id/imgPage"
        android:name="com.example.data_store_try2.ImgPage"
        android:label="fragment_img_page"
        tools:layout="@layout/fragment_img_page" />
</navigation>